# outbound-engine

./: .gitignore  ARCHITECTURE.md  INTEGRATION_GUIDE.md  install.sh  test_backup.rs
backend/: Cargo.toml  Cargo.toml.save
backend/ai/: mod.rs
backend/migrations/: 0001_create_clients.sql  0002_create_client_configs.sql  0003_create_contacts.sql  0004_create_campaigns.sql  0005_create_jobs.sql  0006_create_emails_sent.sql  0007_alter_jobs_add_assigned_worker.sql  0008_create_client_icp_profiles.sql  0009_create_companies.sql  0010_create_company_signals.sql  0011_create_lead_scores.sql  0012_create_company_news.sql  0013_create_company_news_raw.sql  0014_create_news_notify_trigger.sql  0015_create_v3_tables.sql  0016_add_apollo_columns.sql  0017_create_crawl_queue_tables.sql  0018_v3_hardening_schema.sql  0019_phase0_schema.sql  0020_create_aggregate_results.sql  0021_fix_on_conflict_constraints.sql  0022_add_companies_unique_constraints.sql  0023_create_company_fetch_tables.sql  0024_add_match_metadata_column.sql  0025_prequal_worker_schema.sql  0026_prequal_fire_and_forget.sql  0027_fix_candidate_industry_attribution.sql  0028_industry_fetch_cursors.sql  0029_prequal_reasons.sql  0030_company_prequal_updated_at.sql  0031_create_structured_logs.sql  0041_aggregate_extra_columns.sql
backend/src/: INTEGRATION_GUIDE.rs  config.rs  main.rs  main.rs.save  server.rs  worker.rs
backend/src/db/: mod.rs  models.rs
backend/src/jobs/: employee_metrics.rs  funding_analysis.rs  mod.rs  models.rs  phase_b_controller.rs  prequal_listener.rs  service.rs
backend/src/jobs/company_fetcher/: apollo_client.rs  db.rs  dedup.rs  enrichment.rs  mod.rs  models.rs  orchestrator.rs  query_variants.rs  quota_planner.rs
backend/src/jobs/company_fetcher/providers/: diffbot_client.rs  diffbot_converter.rs  diffbot_models.rs  enrichment.rs  mod.rs
backend/src/jobs/onboarding/: enrich_and_crawl.rs  finalize.rs  generate_drafts.rs  llm_client.rs  mod.rs  models.rs  site_crawler.rs  start.rs
backend/src/jobs/prequal_worker/: batch.rs  db.rs  dispatch.rs  mod.rs  models.rs
backend/src/logging/: db_layer.rs  flusher.rs  mod.rs
backend/src/news/: client.rs  listener.rs  mod.rs  models.rs
backend/src/routes/: clients.rs  companies.rs  debug.rs  discovery.rs  health.rs  logs.rs  manage.rs  mod.rs  news.rs  onboarding.rs  pipeline.rs  prequal.rs  queue.rs
frontend/: README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/.next/: app-build-manifest.json  trace
frontend/.next/server/: _error.js  app-paths-manifest.json  server-reference-manifest.json  webpack-runtime.js
frontend/app/: globals.css  layout.tsx  loading.tsx  page.tsx  providers.tsx
frontend/app/clients/: page.tsx
frontend/app/companies/: page.tsx
frontend/app/discovery-runs/: page.tsx
frontend/app/logs/: page.tsx
frontend/app/onboarding/: page.tsx
frontend/app/prequal-runs/: page.tsx
migrations/: 0040_client_onboarding.sql
(+112 files in other folders)
