[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum  = { version = "0.7", features = ["macros", "json"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

sqlx = { version = "0.7", default-features = false, features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "macros",
    "uuid",
    "json"
] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

uuid = { version = "1", features = ["v4", "serde"] }

dotenvy = "0.15"

home = "=0.5.11"

chrono = { version = "0.4", features = ["serde", "clock"] }

anyhow = "1.0"
async-trait = "0.1"

reqwest = { version = "0.12", features = [
    "json",
    "gzip",
    "brotli",
    "deflate",
    "rustls-tls"
] }

# --- NEW: for Lambda-based news client + typed errors ---
thiserror = "1.0"
aws-config = "1"
aws-sdk-lambda = "1"
